# playing-cards

./: Cargo.toml  LICENSE  README.md  cards.rs
examples/: shuffled.rs
src/: lib.rs
