# Copyright © 2018 Bart Massey
# This work is available under the terms of the "GPL v3.0".
# Please see the file LICENSE in this distribution for
# license information.

[package]
name = "cards"
version = "0.1.1"
authors = ["Bart Massey <bart@cs.pdx.edu>"]

[dependencies]
rand = "0.7"

[[bin]]
name = "cards"
path = "cards.rs"
